sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:4: error: not found: value j
  while (b || j!=getNombreValeurs()-1) {
              ^AlgBubbleSort3:6: error: not found: value j
    for (i <- 1 to getNombreValeurs()-j) {
                                      ^