sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.code
def bubbleSort3()  {
  var b = true
  while (b || j!=getNombreValeurs()-1) {
    b=false
    for (i <- 1 to getNombreValeurs()-j) {
      if (getValeur(i-1)>getValeur(i)) {
        echange(i-1,i)
        b=true
      }
    }
  }
}